<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:src="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/img_item_photo"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_item_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/abeezee"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/list_username" />

            <TextView
                android:id="@+id/tv_item_nomor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/list_nomor"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_item_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/abeezee"
            android:maxLines="2"
            tools:text="@string/list_nama" />
    </LinearLayout>
</RelativeLayout>